@@ -1,5 +1,7 @@
 ver 0.23.11 (not yet released)
 * macOS: fix build failure "no archive members specified"
+* Windows
+  - fix crash bug (stack buffer overflow) after I/O errors
 * Android/Windows
   - update OpenSSL to 3.0.7
 
